@@ -228,7 +228,6 @@ t/00_TestUtil_ServerRunner.t
 t/execv_success.pl
 t/exit_failure.pl
 t/exit_success.pl
-t/exit_sys_success.pl
 t/ftest/bar.txt
 t/ftest/dir_empty/.gitkeep
 t/ftest/file_bytes8.txt
