@@ -121,6 +121,15 @@ else {
   }
 }
 
+{
+  {
+    my $exit_success_program = "$^X -Mblib $FindBin::Bin/sys_exec.pl";
+    my $output = `$exit_success_program`;
+    is($output, 'Hello abc');
+    ok($? >> 8 == POSIX::EXIT_SUCCESS);
+  }
+}
+
 # The exit status
 unless ($^O eq 'MSWin32') {
 
